got the contact me form to work and added toggle menu

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Documentation</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; }
-        .container { max-width: 600px; margin: auto; padding: 20px; }
-        h1 { color: #333; }
-        p { margin: 10px 0; }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>API Documentation</h1>
-        <p><strong>GET /api/characters</strong> - Returns a list of all characters.</p>
-        <p><strong>GET /api/characters/:id</strong> - Returns a single character by ID.</p>
-    </div>
+    <h1>Video Game Character API</h1>
+
+    <section>
+        <p>Get All Characters
+            <a href="/api/characters">All Characters</a>
+        </p>
+    </section>
+
+    <!-- <section>
+        <p>Get Character by ID
+            <a href="/api/characters/mario">Mario</a>
+        </p>
+    </section> -->
 </body>
 </html>
