--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Documentation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Video Game Character API</h1>
 
     <section>
-        <p>Get All Characters
-            <a href="/api/characters">All Characters</a>
-        </p>
+        <p>Get All Characters</p>
+        <a href="/api/characters">All Characters</a>
     </section>
 
-    <!-- <section>
-        <p>Get Character by ID
-            <a href="/api/characters/mario">Mario</a>
-        </p>
-    </section> -->
+    <!-- Optional section for specific character ID -->
+    <!-- 
+    <section>
+        <p>Get Character by ID</p>
+        <a href="/api/characters/mario">Mario</a>
+    </section>
+    -->
 </body>
 </html>
