corrected fetch request

--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
         <p>Get All Characters</p>
         <a href="/api/characters">All Characters</a>
     </section>
-
-    <!-- Optional section for specific character ID -->
-    <!-- 
+    
     <section>
-        <p>Get Character by ID</p>
-        <a href="/api/characters/mario">Mario</a>
+        <p>Get Character Images</p>
+        <a href='/api/images'>All images</a>
     </section>
-    -->
 </body>
 </html>
