added mongodb working

--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
         <p>Get Character Images</p>
         <a href='/api/images'>All images</a>
     </section>
+
+    <section>
+        <p>Get All Characters</p>
+        <a href="/api/addedcharacters">Get Added Characters</a>
+    </section>
 </body>
 </html>
