added characterlist array

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Video Game Character API</h1>
 
     <section>
-        <p>Get All Characters</p>
-        <a href="/api/characters">All Characters</a>
+        <p>Get Characters details</p>
+        <a href="/api/characters">Get Characters details</a>
     </section>
     
     <section>
@@ -20,8 +20,12 @@
     </section>
 
     <section>
-        <p>Get All Characters</p>
+        <p>Get added Characters</p>
         <a href="/api/addedcharacters">Get Added Characters</a>
+    </section>
+    <section>
+        <p>Get Characters</p>
+        <a href="/api/CharacterList">Get Characters</a>
     </section>
 </body>
 </html>
